Refactored code to import CA certificate.
The code to import CA certificate has been moved from PKIConnection
into PKIClient to allow reuse.

The Client classes have been modified such that it uses a shared
PKIClient object instead of PKIConnection.

The return codes in CertFindCLI has been fixed to be more consistent
with other commands.

Ticket #491